force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Geolocation_2_Longitude__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Geolocation_2_Longitude__c</fullName>
    <label>Geolocation 2 Longitude</label>
    <length>40</length>
    <type>Text</type>
</CustomField>