force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Guarantor_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Guarantor_ID__c</fullName>
    <label>Guarantor ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>