force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Guarantor_Relationship__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Guarantor_Relationship__c</fullName>
    <label>Guarantor Relationship</label>
    <length>150</length>
    <type>Text</type>
</CustomField>