force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hire_Date__c</fullName>
    <description>workday</description>
    <label>Hire Date</label>
    <type>DateTime</type>
</CustomField>