force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Home_Department_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Home_Department_2__c</fullName>
    <description>workday</description>
    <label>Home Department 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>