force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Home_Department_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Home_Department_Code__c</fullName>
    <description>workday</description>
    <label>Home Department Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>