force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Hospital_Batch_Checked__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hospital_Batch_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the patient encounter is self guarantor, update the patient interim, delete the guarantor interim then re-parent the patient encounter and mark this check box to true.</description>
    <label>Hospital Batch Checked</label>
    <type>Checkbox</type>
</CustomField>