force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Hospital_Dev_and_Fundraising_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hospital_Dev_and_Fundraising_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hospital Dev and Fundraising Opt Out</label>
    <type>Checkbox</type>
</CustomField>