force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Hospital_Physician_CMM_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hospital_Physician_CMM_Group_Code__c</fullName>
    <label>Hospital Physician CMM Group Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>