force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Hospital_Physician_CMM_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hospital_Physician_CMM_Group_Description__c</fullName>
    <label>Hospital Physician CMM Group Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>