force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Interim_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Interim_Name_Auto_Number__c</fullName>
    <displayFormat>INT-{0000000}</displayFormat>
    <label>Interim Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>