force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Is_Deceased__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deceased</label>
    <type>Checkbox</type>
</CustomField>