force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Is_Employed_By_University__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Employed_By_University__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Employed By University</label>
    <type>Checkbox</type>
</CustomField>