force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Is_First_Generation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_First_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Generation</label>
    <type>Checkbox</type>
</CustomField>