force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Is_Hospital_Batch__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Hospital_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hospital Batch</label>
    <type>Checkbox</type>
</CustomField>