force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Is_New_Hire__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_New_Hire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>workday</description>
    <label>Is New Hire</label>
    <type>Checkbox</type>
</CustomField>