force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Is_Student_a_Parent__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Student_a_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Student a Parent</label>
    <type>Checkbox</type>
</CustomField>