force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Job_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Job_Code__c</fullName>
    <description>workday</description>
    <label>Job Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>