force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Last_Day_of_Leave__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Last_Day_of_Leave__c</fullName>
    <description>workday: Last Day of Leave (Actual)</description>
    <label>Last Day of Leave</label>
    <type>DateTime</type>
</CustomField>