force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Last_Name__c</fullName>
    <description>Last Name</description>
    <inlineHelpText>Last Name</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>