force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Manual_Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Manual_Review_Reason__c</fullName>
    <description>Reason for Manual Review</description>
    <label>Manual Review Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>