force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Manual_Review_Reason_Multiple_Line__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Manual_Review_Reason_Multiple_Line__c</fullName>
    <label>Manual Review Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>