force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Marital__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Marital__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>Domestic Partnership</fullName>
            </value>
            <value>
                <fullName>Partnered</fullName>
            </value>
            <value>
                <fullName>Married/Partnered</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>%IsDeleted%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>