force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Master_Interim__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Master_Interim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Interim</label>
    <referenceTo>ucinn_ascendv2__Interim__c</referenceTo>
    <relationshipLabel>Interims</relationshipLabel>
    <relationshipName>Interims_Master_Interim</relationshipName>
    <type>Lookup</type>
</CustomField>