force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Master_Interim_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Master_Interim_Name_Formula__c</fullName>
    <formula>ucinn_ascendv2__Master_Interim__r.ucinn_ascendv2__First_Name__c &amp; &quot; &quot; &amp;  ucinn_ascendv2__Master_Interim__r.ucinn_ascendv2__Last_Name__c</formula>
    <label>Master Interim Name</label>
    <type>Text</type>
</CustomField>