force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Matching_Key_Value_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Key_Value_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to identify target duplicate interims. Configured using Interim to Interim matching rule.</description>
    <inlineHelpText>Generated using executeCreateMatchingKVBatch().</inlineHelpText>
    <label>Matching Key Value 1</label>
    <referenceTo>ucinn_ascendv2__Matching_Key_Value__c</referenceTo>
    <relationshipLabel>Interims</relationshipLabel>
    <relationshipName>Interims</relationshipName>
    <type>Lookup</type>
</CustomField>