force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Matching_Key_Value_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Key_Value_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to identify target duplicate interims. Configured using Interim to Interim matching rule.</description>
    <inlineHelpText>Generated using executeCreateMatchingKVBatch().</inlineHelpText>
    <label>Matching Key Value 2</label>
    <referenceTo>ucinn_ascendv2__Matching_Key_Value__c</referenceTo>
    <relationshipLabel>Interims (Matching Key Value 2)</relationshipLabel>
    <relationshipName>Interims1</relationshipName>
    <type>Lookup</type>
</CustomField>