force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Middle_Name__c</fullName>
    <description>Middle Name or Initial</description>
    <inlineHelpText>Middle Name or Initial</inlineHelpText>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>