force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Most_Recent_Institution_CEEB_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Most_Recent_Institution_CEEB_Code__c</fullName>
    <label>Most Recent Institution CEEB Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>