force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Most_Recent_Institution_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Most_Recent_Institution_Type__c</fullName>
    <label>Most Recent Institution Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>