force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__New_Donor_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__New_Donor_ID_Formula__c</fullName>
    <formula>IF(ISNULL( ucinn_ascendv2__Contact__c ), IF(ISNULL(ucinn_ascendv2__Account__c), null, ucinn_ascendv2__Account__r.ucinn_ascendv2__Donor_ID__c), ucinn_ascendv2__Contact__r.ucinn_ascendv2__Donor_ID__c)</formula>
    <label>New Donor ID</label>
    <type>Text</type>
</CustomField>