force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__NPI__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__NPI__c</fullName>
    <label>NPI</label>
    <length>12</length>
    <type>Text</type>
</CustomField>