force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Number_of_Siblings__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Siblings__c</fullName>
    <label>Number of Siblings</label>
    <length>10</length>
    <type>Text</type>
</CustomField>