force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Occupation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Occupation__c</fullName>
    <inlineHelpText>This field should contain the business title for the constituent. Examples include CEO, Director of Marketing, etc.</inlineHelpText>
    <label>Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>