force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Organization_Email_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Organization_Email_1__c</fullName>
    <label>Organization Email 1</label>
    <length>70</length>
    <type>Text</type>
</CustomField>