force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Organization_Industry__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Organization_Industry__c</fullName>
    <label>Organization Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>