force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Organization_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Organization_Phone_1__c</fullName>
    <label>Organization Phone 1</label>
    <type>Phone</type>
</CustomField>