force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Organization_Phone_1_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Organization_Phone_1_Type__c</fullName>
    <label>Organization Phone 1 Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>