force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Organization_Postal_Code_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Organization_Postal_Code_1__c</fullName>
    <label>Organization Postal Code 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>