force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Parent_Type__c</fullName>
    <label>Parent Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>