force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Parents_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Parents_Marital_Status__c</fullName>
    <label>Parents&apos; Marital Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>