force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Phone_2_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Phone_2_Type__c</fullName>
    <label>Phone 2 Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>