force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Phone_3__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Phone_3__c</fullName>
    <label>Phone 3</label>
    <type>Phone</type>
</CustomField>