force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Phone_Preference__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Phone_Preference__c</fullName>
    <label>Phone Preference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>