force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Physician_Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Physician_Status__c</fullName>
    <description>Used to distinguish active vs inactive physicians maintained by Keck Advancement Operations</description>
    <label>Physician Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Physician_Status</valueSetName>
    </valueSet>
</CustomField>