force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__PID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__PID__c</fullName>
    <description>PID coming from SIS.</description>
    <label>PID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>