force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Possible_Duplicate_Checked__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Possible_Duplicate_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if already checked duplicate for this record.</description>
    <label>Possible Duplicate Checked</label>
    <type>Checkbox</type>
</CustomField>