force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Preferred_Address__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Preferred_Address__c</fullName>
    <inlineHelpText>Select which address is the preferred address</inlineHelpText>
    <label>Preferred Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address 1</fullName>
            </value>
            <value>
                <fullName>Address 2</fullName>
            </value>
            <value>
                <fullName>Address 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>