force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Preferred_Email__c</fullName>
    <inlineHelpText>Select which email address is the preferred email address</inlineHelpText>
    <label>Preferred Email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email 1</fullName>
            </value>
            <value>
                <fullName>Email 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>