force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Preferred_Phone__c</fullName>
    <inlineHelpText>Select which phone is the preferred phone</inlineHelpText>
    <label>Preferred Phone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone 1</fullName>
            </value>
            <value>
                <fullName>Phone 2</fullName>
            </value>
            <value>
                <fullName>Phone 3</fullName>
            </value>
            <value>
                <fullName>Phone 4</fullName>
            </value>
            <value>
                <fullName>Phone 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>