force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Prefix__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Prefix__c</fullName>
    <label>Prefix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>