force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Primary_or_Secondary_Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Primary_or_Secondary_Grade_Level__c</fullName>
    <label>Primary or Secondary Grade Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>