force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Related_Interim_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Related_Interim_1__c</fullName>
    <description>Field that references an External ID field on the interim for forming of parent to child relationships.</description>
    <inlineHelpText>Field that references an External ID field on the interim for forming of parent to child relationships.</inlineHelpText>
    <label>Related Interim 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>