force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Relationship_1_Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Relationship_1_Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship 1 Related Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interims (Relationship 1 Related Constituent)</relationshipLabel>
    <relationshipName>Interims_Relationship_1_Related_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>