force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Relationship_1_Related_Role__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Relationship_1_Related_Role__c</fullName>
    <description>Related role of Relationship 1</description>
    <inlineHelpText>Related role of Relationship 1</inlineHelpText>
    <label>Relationship 1 Related Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>