force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Relationship_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Relationship_Type_Formula__c</fullName>
    <formula>IF(  ISBLANK(ucinn_ascendv2__Parent_Type__c ) ,  ucinn_ascendv2__Sibling_Relationship__c ,  ucinn_ascendv2__Parent_Type__c )</formula>
    <label>Relationship Type</label>
    <type>Text</type>
</CustomField>