force-app/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Religious_Preference__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Religious_Preference__c</fullName>
    <label>Religious Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>